# Test_CI-CD_QR

./: CMakeLists.txt  conanfile.txt
.github/workflows/: build.yml
profiles/: imx8mpevk
src/: identique_ratio.cpp
